--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       }
 
       try {
-        const response = await fetch("http://localhost:5000/api/submit", {
+        const response = await fetch("https://cf-atd-server.vercel.app/api/submit", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
