--- a/manage.html
+++ b/manage.html
@@ -104,7 +104,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-  const API_URL = "http://localhost:5000/api/submissions";
+  const API_URL = "https://cf-atd-server.vercel.app/api/submissions";
   const tableBody = document.getElementById("tableBody");
   const tagContainer = document.getElementById("tagContainer");
   const modalContent = document.getElementById("modalContent");
