--- a/manage.html
+++ b/manage.html
@@ -1,37 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Manage Submissions</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    .tag-btn {
-      margin: 4px;
-      cursor: pointer;
-    }
-    .tag-btn.active {
-      background-color: #0d6efd !important;
-      color: white !important;
-    }
-    .modal-body code {
-      background: #f8f9fa;
-      padding: 4px 6px;
-      border-radius: 4px;
-    }
-    .scrollable-modal {
-      max-height: 70vh;
-      overflow-y: auto;
-    }
-    .search-bar {
-      margin-bottom: 20px;
-    }
+    .tag-btn { margin: 4px; cursor: pointer; }
+    .tag-btn.active { background-color: #0d6efd !important; color: white !important; }
+    .search-bar { margin-bottom: 20px; }
   </style>
 </head>
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">CF Crackers</a>
+      <a class="navbar-brand"  href="./index.html">CF Crackers</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -51,12 +34,10 @@
   <div class="container py-5">
     <h2 class="mb-4 text-center">📚 Manage CP Submissions</h2>
 
-    <!-- Search Bar -->
     <div class="search-bar mb-4">
-      <input type="text" id="searchInput" class="form-control" placeholder="Search by User or Problem Title..." oninput="renderTable()">
+      <input type="text" id="searchInput" class="form-control" placeholder="Search by User or Problem Title..." oninput="renderTable()" />
     </div>
 
-    <!-- Back to All Button -->
     <div class="mb-4">
       <button id="backToAllBtn" class="btn btn-secondary" onclick="resetFilters()">Back to All Categories</button>
     </div>
@@ -80,33 +61,16 @@
       </table>
     </div>
 
-    <!-- Pagination Controls -->
     <nav aria-label="Page navigation">
       <ul class="pagination justify-content-center" id="pagination"></ul>
     </nav>
   </div>
 
-  <!-- Modal -->
-  <div class="modal fade" id="detailsModal" tabindex="-1">
-    <div class="modal-dialog modal-xl">
-      <div class="modal-content shadow">
-        <div class="modal-header bg-primary text-white">
-          <h5 class="modal-title">Submission Details</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body scrollable-modal" id="modalContent"></div>
-      </div>
-    </div>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     const API_URL = "https://cf-atd-server.vercel.app/api/submissions";
     const tableBody = document.getElementById("tableBody");
     const tagContainer = document.getElementById("tagContainer");
-    const modalContent = document.getElementById("modalContent");
     const searchInput = document.getElementById("searchInput");
-    const backToAllBtn = document.getElementById("backToAllBtn");
     const pagination = document.getElementById("pagination");
 
     let allData = [];
@@ -118,16 +82,12 @@
     async function fetchData() {
       try {
         const res = await fetch(API_URL);
-        if (!res.ok) {
-          throw new Error(`Failed to fetch data: ${res.statusText}`);
-        }
         allData = await res.json();
         populateTags();
         renderTable();
         setupPagination();
-      } catch (error) {
-        console.error("Error fetching data:", error);
-        tableBody.innerHTML = `<tr><td colspan="6" class="text-center text-danger">Failed to fetch data. Please try again later.</td></tr>`;
+      } catch {
+        tableBody.innerHTML = `<tr><td colspan="6" class="text-center text-danger">Failed to fetch data.</td></tr>`;
       }
     }
 
@@ -135,12 +95,9 @@
       const tagSet = new Set();
       allData.forEach(entry => {
         if (entry.solvedStatus === "yes") {
-          entry.problems.forEach(p => {
-            p.tags?.split(',').forEach(tag => tagSet.add(tag.trim()));
-          });
+          entry.problems.forEach(p => p.tags?.split(',').forEach(tag => tagSet.add(tag.trim())));
         }
       });
-
       const sortedTags = [...tagSet].sort();
       tagContainer.innerHTML = "";
       sortedTags.forEach(tag => {
@@ -148,14 +105,9 @@
         span.className = "badge rounded-pill bg-secondary tag-btn";
         span.textContent = tag;
         span.onclick = () => {
-          if (selectedTag === tag) {
-            selectedTag = "";
-            span.classList.remove("active");
-          } else {
-            selectedTag = tag;
-            document.querySelectorAll(".tag-btn").forEach(el => el.classList.remove("active"));
-            span.classList.add("active");
-          }
+          selectedTag = selectedTag === tag ? "" : tag;
+          document.querySelectorAll(".tag-btn").forEach(el => el.classList.remove("active"));
+          if (selectedTag) span.classList.add("active");
           renderTable();
           setupPagination();
         };
@@ -164,9 +116,8 @@
     }
 
     function renderTable() {
-      tableBody.innerHTML = "";
-
       searchQuery = searchInput.value.toLowerCase().trim();
+      tableBody.innerHTML = "";
 
       const filteredData = allData.filter(entry => {
         const problems = entry.problems || [];
@@ -176,39 +127,27 @@
 
         if (entry.solvedStatus === "yes" && selectedTag && filteredProblems.length === 0) return false;
 
-        const matchesSearch = entry.name.toLowerCase().includes(searchQuery) ||
-                              filteredProblems.some(p => p.title.toLowerCase().includes(searchQuery));
-
-        return matchesSearch;
+        return entry.name.toLowerCase().includes(searchQuery) ||
+               filteredProblems.some(p => p.title.toLowerCase().includes(searchQuery));
       });
 
       const start = (currentPage - 1) * rowsPerPage;
-      const end = start + rowsPerPage;
-      const currentPageData = filteredData.slice(start, end);
+      const currentPageData = filteredData.slice(start, start + rowsPerPage);
 
-      currentPageData.forEach((entry, index) => {
+      currentPageData.forEach((entry, i) => {
         const problems = entry.problems || [];
         const tags = new Set();
         problems.forEach(p => p.tags?.split(",").forEach(tag => tags.add(tag.trim())));
 
         const row = document.createElement("tr");
         row.innerHTML = `
-          <td class="text-center">${start + index + 1}</td>
-          <td>${entry.name || "N/A"}</td>
-          <td>${entry.date ? new Date(entry.date).toLocaleDateString('en-US') : "N/A"}</td>
+          <td class="text-center">${start + i + 1}</td>
+          <td>${entry.name}</td>
+          <td>${entry.date ? new Date(entry.date).toLocaleDateString() : "N/A"}</td>
+          <td class="text-center"><span class="badge bg-${entry.solvedStatus === 'yes' ? 'success' : 'danger'}">${entry.solvedStatus}</span></td>
+          <td>${[...tags].map(tag => `<span class="badge bg-light text-dark border me-1">${tag}</span>`).join("") || "—"}</td>
           <td class="text-center">
-            <span class="badge bg-${entry.solvedStatus === 'yes' ? 'success' : 'danger'}">${entry.solvedStatus || "Unknown"}</span>
-          </td>
-          <td>${[...tags].map(tag => `<span class="badge bg-light text-dark border me-1">${tag}</span>`).join("") || '—'}</td>
-          <td class="text-center">
-            <button 
-              class="btn btn-primary btn-sm" 
-              data-entry='${encodeURIComponent(JSON.stringify(entry))}'
-              onclick="showEntryDetails(this)"
-              data-entry="{&quot;key&quot;:&quot;value&quot;}"
-            >
-              View
-            </button>
+            <a class="btn btn-outline-primary btn-sm" href="./details.html?id=${entry._id}">View</a>
           </td>
         `;
         tableBody.appendChild(row);
@@ -216,7 +155,7 @@
     }
 
     function setupPagination() {
-      const filteredData = allData.filter(entry => {
+      const total = allData.filter(entry => {
         const problems = entry.problems || [];
         const filteredProblems = selectedTag && entry.solvedStatus === "yes"
           ? problems.filter(p => p.tags?.includes(selectedTag))
@@ -224,19 +163,12 @@
 
         if (entry.solvedStatus === "yes" && selectedTag && filteredProblems.length === 0) return false;
 
-        const matchesSearch = entry.name.toLowerCase().includes(searchQuery) ||
-                              filteredProblems.some(p => p.title.toLowerCase().includes(searchQuery));
+        return entry.name.toLowerCase().includes(searchQuery) ||
+               filteredProblems.some(p => p.title.toLowerCase().includes(searchQuery));
+      }).length;
 
-        return matchesSearch;
-      });
-
-      const totalPages = Math.ceil(filteredData.length / rowsPerPage);
+      const totalPages = Math.ceil(total / rowsPerPage);
       pagination.innerHTML = "";
-
-      const prevPageItem = document.createElement("li");
-      prevPageItem.className = "page-item" + (currentPage === 1 ? " disabled" : "");
-      prevPageItem.innerHTML = `<a class="page-link" href="#" onclick="changePage(${currentPage - 1})">Previous</a>`;
-      pagination.appendChild(prevPageItem);
 
       for (let i = 1; i <= totalPages; i++) {
         const pageItem = document.createElement("li");
@@ -244,72 +176,13 @@
         pageItem.innerHTML = `<a class="page-link" href="#" onclick="changePage(${i})">${i}</a>`;
         pagination.appendChild(pageItem);
       }
-
-      const nextPageItem = document.createElement("li");
-      nextPageItem.className = "page-item" + (currentPage === totalPages ? " disabled" : "");
-      nextPageItem.innerHTML = `<a class="page-link" href="#" onclick="changePage(${currentPage + 1})">Next</a>`;
-      pagination.appendChild(nextPageItem);
     }
 
-    function changePage(page) {
-      if (page < 1 || page > Math.ceil(allData.length / rowsPerPage)) return;
-      currentPage = page;
+    function changePage(p) {
+      if (p < 1) return;
+      currentPage = p;
       renderTable();
       setupPagination();
-    }
-
-    function showEntryDetails(button) {
-
-      const rawEntry = button.getAttribute('data-entry');
-console.log('Raw data-entry:', rawEntry);
-
-const decodedEntry = decodeURIComponent(rawEntry);
-console.log('Decoded data-entry:', decodedEntry);
-
-      const entry = JSON.parse(decodeURIComponent(button.getAttribute('data-entry')));
-
-      if (!entry) {
-        modalContent.innerHTML = `<div class="alert alert-danger">Error: Entry data is missing or undefined.</div>`;
-        return;
-      }
-
-      const problems = entry.problems || [];
-      const modalBody = problems.length > 0
-        ? problems.map((problem, i) => `
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="heading${i}">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse${i}">
-                Problem ${i + 1}: ${problem.title || "Untitled Problem"}
-              </button>
-            </h2>
-            <div id="collapse${i}" class="accordion-collapse collapse" data-bs-parent="#problemList">
-              <div class="accordion-body">
-                <p><strong>Link:</strong> <a href="${problem.link || "#"}" target="_blank" class="text-primary">${problem.link || "No Link Provided"}</a></p>
-                <p><strong>Tags:</strong> 
-                  ${problem.tags
-                    ? problem.tags.split(',').map(tag => `<span class="badge bg-info text-dark me-1">${tag.trim()}</span>`).join('')
-                    : `<span class="badge bg-secondary text-light">NA</span>`}
-                </p>
-                <p><strong>Source Code:</strong> 
-                  <a href="${problem.sourceCode || "#"}" target="_blank" class="text-success">${problem.sourceCode || "No Code"}</a>
-                </p>
-                <p><strong>How Solved:</strong></p>
-                <div class="alert alert-${problem.howSolved ? 'success' : 'warning'}">
-                  ${problem.howSolved || 'Solution details not provided'}
-                </div>
-              </div>
-            </div>
-          </div>
-        `).join('')
-        : `<div class="alert alert-warning">No problems or solutions available for this entry.</div>`;
-
-      modalContent.innerHTML = `
-        <div class="mb-3"><strong>Handle:</strong> ${entry.name || "N/A"}</div>
-        <div class="mb-3"><strong>Date:</strong> ${entry.date ? new Date(entry.date).toLocaleDateString('en-US') : "N/A"}</div>
-        <div class="mb-3"><strong>Status:</strong> <span class="badge bg-${entry.solvedStatus === "yes" ? "success" : "danger"}">${entry.solvedStatus || "Unknown"}</span></div>
-        ${modalBody}
-      `;
-      new bootstrap.Modal(document.getElementById("detailsModal")).show();
     }
 
     function resetFilters() {
@@ -321,5 +194,6 @@ console.log('Decoded data-entry:', decodedEntry);
 
     fetchData();
   </script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
