--- a/manage.html
+++ b/manage.html
@@ -5,6 +5,7 @@
   <title>Manage Submissions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="shortcut icon" href="./assets/fav.png" type="image/x-icon">
   <style>
     .tag-btn { margin: 4px; cursor: pointer; }
     .tag-btn.active { background-color: #0d6efd !important; color: white !important; }
